--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.19.2",
-        "pug": "^3.0.2"
+        "mysql2": "^3.9.7",
+        "pug": "^3.0.2",
+        "sequelize": "^6.37.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
