--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.4.5",
+        "exceljs": "^4.4.0",
         "express": "^4.19.2",
         "mysql2": "^3.9.7",
         "pug": "^3.0.2",
